     get Mon,Tue,Wed etc instead of M,T,W (using glibc's en_GB
     locale).
   - print_header() now outputs a DOCTYPE identifier as well as
     sending Pragma no-cache and an Expires header in the
     past. This should help ensure the web pages don't get cached.
   - Change trailer.inc to make print preview more likely to work on
     windows and non-apache servers

Version 1.1-pre1 (Thu May 30 12:41:02 BST 2002)
   + add config option for drop-down boxes to select area and room
          (Thanks to sponsorship of LTC Corporation)
   + allow multiple rooms to be booked at the same time
          (Thanks to sponsorship of the City of Wayne and LAEP)
   + document need for register_globals() with new PHP versions
   + add auth_nis.inc from Jeff Hoover (jberanek)
   + add auth_imap.inc
   + add warning about PHP3 not working
   + new language tokens

   - Stop problem where all strings turn to "N"
   - Fixes a problem where $resolution is an odd amount
   - extra javascript validation around n-weekly bookings
   - extra array index quoting to stop newer php warnings
   - Commented all authentication schemes (jberanek)
   - Change mrbs_repeat schema for postgres (mrbs_repeat.rep_num_weeks => smallint)
   - replace poxix_uname with php_uname function for portability
   - Declare $HTTP_ACCEPT_LANGUAGE global in config.inc
   - some int casts to fix a bug from sourceforge
   - language files normalised

   - update translations: Norway, Rune Johansen
                          France,
			  Italy, Gianni
			  Netherlands, Marc ter Horst
			  Sweden, Hakan Nilsson
			  Germany, Michael Redinger

   + add translation:     Czech, SmEjDiL

Version 1.0 (Thu Aug 30 22:26:54 BST 2001)
    Added two upgrade.xx.sql files which should have been in -pre2

Version 1.0-pre2 (Sun Jul  8 13:43:53 BST 2001)
    Incorporated diff from Scott Leonard that allows you to configure a refresh
     time for roombooker web pages.  Set config variable $refresh_rate to the